added travis figure

--- a/Hoofdstukken/evaluatie/samenwerking.tex
+++ b/Hoofdstukken/evaluatie/samenwerking.tex
@@ -14,4 +14,7 @@ Regelmatig werd de lijst met taken bijgewerkt. Taken bestonden uit: projecttaken
 
 \paragraph{Verbeteringen} Er is nu gewerkt in een projectgroep zonder direct uren budget, mocht dit het geval zijn zouden de inschattingsmethoden en burndown chart uit de scrum methode kunnen worden gebruikt. Verder zouden de besprekingen zogenaamde \emph{stand-up meetings} kunnen worden waarbij iedereen staat en niet voor de computer zit. Hierdoor konden de dagelijkse besprekingen wellicht wat vlotter verlopen.
 
+\paragraph{Pull requests}
+Bij aanvang van het project was deze werkwijze voor veel teamleden nieuw. En daarom is het in het begin niet altijd juist toegepast. Maar naarmate het project vorderde is steeds vaker met succes gebruik gemaakt van het pull request principe. Dit zorgde er voor dat teamleden elkaars code controleerde en dat er minder bugs zaten in de versies op de \inlinecode{dev} branch.
+
 \paragraph{Verbeteringen} Naast het integreren van documentatie zou het buildscript ook automatisch per versie de test coverage uit kunnen rekenen. Dit zou ontwikkelaars nog meer inzicht kunnen geven in de kwaliteit van de software en hoe deze voor– of achteruit gaat per versie.
