Organisatie is herschreven, alleen nog concluderende alinea nodig

--- a/references.bib
+++ b/references.bib
@@ -11,5 +11,5 @@ year = {2008}
       month = "February",
       year = "2010",
       url = "http://nvie.com/posts/a-successful-git-branching-model/",
-      urldate = {5 Feb 2010},
+      urldate = {5 Feb 2010}
 }
