--- a/Hoofdstukken/organisatie.tex
+++ b/Hoofdstukken/organisatie.tex
@@ -10,7 +10,8 @@ Zaken als planning, verdeling van de verantwoordelijkheden en het beslissen over
 
 Verschillende rollen zijn toegewezen aan de betrokken personen. Elke samenkomst zijn er zogenaamde scrum besprekingen gehouden en bij aanvang van een nieuwe fase zijn er sprint besprekingen gehouden. Daarbij zijn elke keer opnieuw het project– en sprintbacklog samengesteld en bijgewerkt.
 
-\paragraph{Rollen} Er is een verdeling van verantwoordelijkheden gemaakt. Hieronder een kort overzicht van de teamleden en verantwoordelijkheden.
+\subsubsection{Rollen}
+Er is een verdeling van verantwoordelijkheden gemaakt. Hieronder een kort overzicht van de teamleden en verantwoordelijkheden.
 \begin{enumerate}
     \item \emph{J. van Doorn} had de taak van \emph{scrum master} en was verantwoordelijk voor het testen van de software.
     \item \emph{P.T. Jager} was notulist voor alle besprekingen en samen met Buit verantwoordelijk voor de Haskell code.
@@ -20,7 +21,7 @@ Verschillende rollen zijn toegewezen aan de betrokken personen. Elke samenkomst 
 \end{enumerate}
 Naast de teamleden nam de opdrachtgever de rol van \emph{product owner} aan. Hiermee is de opdrachtgever onder andere verantwoordelijk voor het aangeven van de volgorde waarin features ge\"implementeerd.
 
-\paragraph{Taken}
+\subsubsection{Taken}
 Taken worden bijgehouden in de zogenaamde \emph{backlogs}. Er is een \emph{backlog} voor alle taken die nog uitgevoegd moeten worden en er is een \emph{backlog} voor de taken die ingepland zijn voor de huidige fase. Taken bestaan uit: projecttaken, als het bijhouden van de planning; ontwikkeltaken, als het oplossen van bugs en het schrijven van nieuwe features; schrijftaken en overige taken.
 
 \begin{figure}[H]
@@ -33,19 +34,16 @@ Taken worden bijgehouden in de zogenaamde \emph{backlogs}. Er is een \emph{backl
 
 De lijst van ontwikkeltaken werd bijgehouden op het \emph{GitHub} platform—hierover meer in \fullref{sec:technische_organisatie}. Deze ontwikkeltaken werden daar ook wel \emph{issues} genoemd. Deze en andere taken werd gezamenlijk bijgehouden op \emph{Trello}. Met deze applicatie kan een online takenbord gemaakt worden, zie \autoref{fig:trello}. Met \emph{Trello} hebben alle betrokkenen een goed inzicht in de taken die nog openstaan en reeds zijn uitgevoerd.
 
-\paragraph{Besprekingen} Er zijn twee typen besprekingen die regelmatig gehouden worden. Ten eerste wordt elke samenkomst de \emph{Scrum bespreking} gehouden. Tijdens deze bespreking vertelt ieder teamlid kort wat hij/zij sinds de vorige bespreking gedaan heeft en of er problemen waren. Daarna verteldt het teamlid waar hij/zij na de bespreking mee bezig gaat. Het is hier de bedoeling dat ieder teamlid een concreet kortetermijn doel stelt.
+\subsubsection{Besprekingen}
+Er zijn twee typen besprekingen die regelmatig gehouden worden. Ten eerste wordt elke samenkomst de \emph{Scrum bespreking} gehouden. Tijdens deze bespreking vertelt ieder teamlid kort wat hij/zij sinds de vorige bespreking gedaan heeft en of er problemen waren. Daarna verteldt het teamlid waar hij/zij na de bespreking mee bezig gaat. Het is hier de bedoeling dat ieder teamlid een concreet kortetermijn doel stelt.
 Ten tweede wordt er bij aanvang van een nieuwe fase een planning gemaakt op basis van de taken in het \emph{project backlog}. De prioriteit per taak wordt aangegeven door de \emph{product owner}, in ons geval de opdrachgever. De teamleden bepalen vervolgens tijdens de bespreking hoeveel van deze taken uitgevoerd kunnen worden en verplaatsen deze naar het \emph{spring backlog}. 
 
 \section{Technische organisatie} \label{sec:technische_organisatie}
 Bij het bouwen van software met een groep is het belangrijk dat elke ontwikkelaar zich kan concentreren op de feature die hij/zij aan het ontwikkelen is. Idealiter hoeft er geen rekening gehouden te worden met andere features die door anderen ontwikkeld worden. Er is dan ook gekozen om gebruik te maken van het gedistribueerde versiebeheer systeem \emph{Git} met een centraal repository op \emph{GitHub}.
 
-Er zijn afspraken gemaakt hoe deze versiebeheer software gebuikt moet worden. Zo is er gebruik gemaakt van het \emph{branching model} Gitflow\cite{Gitflow2010}. Als een bepaalde versie van de software op een bepaalde branch staat zegt dit iets over de status van die versie. Zo kan er begonnen worden aan een nieuwe feature vanaf de \inlinecode{dev} branch. En is een versie op de \inlinecode{master} branch klaar voor gebruik.
+Er zijn afspraken gemaakt hoe deze versiebeheer software gebuikt moet worden. Zo is er gebruik gemaakt van het \emph{branching model} Gitflow\cite{Gitflow2010}. Als een bepaalde versie van de software op een bepaalde branch staat zegt dit iets over de status van die versie. Zo kan er begonnen worden aan een nieuwe feature vanaf de \inlinecode{dev} branch. En is een versie op de \inlinecode{master} branch klaar voor gebruik. Het insturen van een nieuwe versie wordt ook wel een \emph{commit} genoemd.
 
-\subsection{Pull requests}
-
-Bij aanvang van de ontwikkeling van een nieuwe feature wordt er een nieuwe branch gemaakt vanaf de \inlinecode{dev} branch. Een voorbeeld hiervan is de \inlinecode{arcs} branch. In \fullref{sec:shapesext} staat beschreven hoe \inlinecode{Arc} shapes toegevoegd kunnen worden. Dit is dus gebeurd op een aparte branch die begonnen is vanaf de \inlinecode{dev} branch, zie \autoref{fig:pullrequest}. 
-
-\begin{figure}
+\begin{figure}[H]
 \begin{center}
 \includegraphics[keepaspectratio,width=\textwidth]{./images/pullrequest.png}
 \caption{Pull Request \#75 Arcs geimplementeerd. – \url{https://github.com/CanvasHS/Canvas.hs/pull/75}}
@@ -53,13 +51,17 @@ Bij aanvang van de ontwikkeling van een nieuwe feature wordt er een nieuwe branc
 \end{center}
 \end{figure}
 
-Als een feature af is moet deze beoordeeld door een ander teamlid voordat deze samengevoegd kan worden met de \inlinecode{dev} branch. Om dit te bewerkstelligen wordt gebruik gemaakt van een \emph{pull request}. Deze \emph{pull request} bevat informatie over de wijzigingen tenopzichte van de versie die op de \inlinecode{dev} branch staat. Een beoordelaar kan de code lezen en deze goedkeuren. Op het moment dat de code goed wordt gekeurd komt een nieuwe versie met de nieuwe feature op de \inlinecode{dev} branch te staan.
+\subsubsection{Pull requests}
 
-\subsection{Continuous integration met Travis CI}
+Bij aanvang van de ontwikkeling van een nieuwe feature wordt er een nieuwe branch gemaakt vanaf de \inlinecode{dev} branch. Een voorbeeld hiervan is de \inlinecode{arcs} branch. In \fullref{sec:shapesext} staat beschreven hoe \inlinecode{Arc} shapes toegevoegd kunnen worden. Dit is gebeurd op een aparte branch die begonnen is vanaf de \inlinecode{dev} branch, zie \autoref{fig:pullrequest}.
 
-Om het beoordelen van code gemakkelijk te maken voor de ontwikkelaar en de beoordelaar is er gebruik gemaakt van de \emph{continuous integration} software \emph{Travis}. Deze software luistert naar nieuwe commits naar het centrale repository, als er een nieuwe commit gedaan is wordt er een virtuele machine opgestart die vervolgens middels een buildscript de versie van de software probeert te bouwen. Dit buildscript staat in de root directory van het repository.
+Als een feature af is moet deze beoordeeld door een ander teamlid voordat de feature samengevoegd kan worden met de \inlinecode{dev} branch. Om dit te bewerkstelligen wordt gebruik gemaakt van een \emph{pull request}. Deze \emph{pull request} bevat informatie over de wijzigingen tenopzichte van de versie die op de \inlinecode{dev} branch staat. Een beoordelaar kan de code lezen en deze goedkeuren. Op het moment dat de code goed wordt gekeurd komt een nieuwe versie met de nieuwe feature op de \inlinecode{dev} branch te staan.
 
-\begin{figure}
+\subsubsection{Continuous integration met Travis CI}
+
+Om het beoordelen van code gemakkelijk te maken is er gebruik gemaakt van de \emph{continuous integration} software \emph{Travis CI}. Deze software luistert naar nieuwe commits naar het centrale repository, na het insturen van een nieuwe versie naar het centrale repository wordt er door Travis CI een virtuele machine opgestart. Deze machine download de zojuist ingestuurde versie en compileert deze inclusief alle tests middels het uitvoeren van een \emph{buildscript}. Dit buildscript staat in de root directory van het repository. Als het compileren slagen en alle tests slagen ook zal de build als geslaagd worden gemarkeerd, zie \autoref{fig:pullrequest} voor het resultaat van de laaste commit op de \inlinecode{arcs} branch. Mocht één van de tests niet slagen of het compileren niet slagen wordt de build als mislukt gemarkeerd.
+
+\begin{figure}[H]
 \begin{center}
 \includegraphics[keepaspectratio,width=\textwidth]{./images/travis.png}
 \caption{Build van Pull Request \#75. – \url{https://travis-ci.org/CanvasHS/Canvas.hs/builds/16168834}}
@@ -67,10 +69,9 @@ Om het beoordelen van code gemakkelijk te maken voor de ontwikkelaar en de beoor
 \end{center}
 \end{figure}
 
-Dit buildscript specificeert onder andere dat de software gebouwd moet worden met de Haskell compiler, maar ook dat alle geschreven tests uitgevoerd moeten worden. Mocht de compilatie of het uitvoeren van een van de tests niet geslaagd zijn is de build gefaald. Dit wordt dan vervolgens ook weergeven in het venster van de pull request. Als een beoordelaar ziet dat de build uit een pull request succesvol is, zoals bijvoorbeeld te zien bij \autoref{fig:pullrequest}, weet hij zeker dat de versie veilig is om te mergen.
+Informatie over het resulstaat van een build kan gebruikt worden bij het boordelen van een pull request. Als een beoordelaar ziet dat de build uit een pull request succesvol is, zoals bijvoorbeeld te zien bij \autoref{fig:pullrequest}, heeft hij/zij een goede indicatie dat de pull request veilig gemerged kan worden.
 
-Het buildscript voert naast de compilatie en de testen nog een paar andere commando's uit. Zo genereert het buildscript ook de documentatie en uploadet deze naar de Canvas.HS website—\url{http://canvashs.github.io}. Op de website kan de documentatie bekeken worden per build. Hierdoor hoeven ontwikkelaars zelf geen documentatie meer te genereren en hebben zij altijd, up to date, doorzoekbare documentatie.
-
+Het buildscript voert naast de compilatie nog een paar andere commando's uit. Zo genereert het buildscript ook de documentatie en uploadet het buildscript deze naar de Canvas.HS website—\url{http://canvashs.github.io}. Op de website kan de documentatie bekeken worden per build. Hierdoor hoeven ontwikkelaars zelf geen documentatie meer te genereren en hebben zij altijd, up-to-date, en doorzoekbare documentatie.
 
 
 
