Traceability matrix uitgebreid

--- a/Hoofdstukken/appendices.tex
+++ b/Hoofdstukken/appendices.tex
@@ -11,3 +11,4 @@
 
 \input{./Hoofdstukken/appendices/gebruikershandleiding.tex}
 \input{./Hoofdstukken/appendices/uitbreiden.tex}
+\input{./Hoofdstukken/appendices/traceability_matrix.tex}
