Deatil/Architectuur: started working on JSON

--- a/references.bib
+++ b/references.bib
@@ -13,3 +13,22 @@ year = {2008}
       url = "http://nvie.com/posts/a-successful-git-branching-model/",
       urldate = {5 Feb 2010}
 }
+@misc{JSON2006,
+	author = {D. Crockford},
+	title = {The application/json Media Type for JavaScript Object Notation (JSON)},
+	month = {July},
+	year = {2006},
+	url = {http://www.ietf.org/rfc/rfc4627.txt},
+	urldate = {13 Jan 2014},
+	shorthand = {RFC4627},
+	note = {RFC4627}
+}
+@misc{Protocol2013,
+	author = {L. J. Buit, J. van Doorn, P. T. Jager, M. J. Roo and M. J. Scheepers},
+	title = "Canvas.Hs Protocol"
+	year = "2013",
+	url = "http://canvashs.github.io/protocol.html"
+	urldate = {13 jan 2014}
+}
+
+	
