Organisatie evaluatie af

--- a/Hoofdstukken/inleiding.tex
+++ b/Hoofdstukken/inleiding.tex
@@ -15,7 +15,7 @@ De ontwikkelde library is uitgebreid getest. Dit geldt zowel voor de geschreven 
 Bij de ontwikkeling van Canvas.hs is er gewerkt volgens eens vooraf vastgestelde afspraken. Daarnaast is er tooling toegepast om de samewerking tussen ontwikkelaars te stroomlijnen. In \autoref{hoofdstuk:organisatie} kan gelezen worden hoe dit alles is ingericht. Verder kan in \autoref{hoofdstuk:evaluatie} gelezen worden hoe de afspraken en tools uiteindelijk zijn toegepast.
 
 \subsubsection{Uitbreiden}
-Er zijn aanbevelingen voor de verdere verbetering van Canvas.hs. Hier wordt op in gegaan in \autoref{hoofdstuk:evaluatie} en \autoref{hoofdstuk:conclusie}. Verder is Canvas.hs opgezet zodat deze gemakkelijk is uit te breiden. In de \fullref{sec:gebruikershandleiding} is te lezen hoe dit gedaan kan worden.
+Er zijn aanbevelingen voor de verdere verbetering van Canvas.hs. Hier wordt op in gegaan in \autoref{hoofdstuk:evaluatie} en \autoref{hoofdstuk:conclusie}. Verder is Canvas.hs opgezet zodat deze gemakkelijk is uit te breiden. In de \fullref{sec:uitbreiden} is te lezen hoe dit gedaan kan worden.
 
 
 
