--- a/Hoofdstukken/evaluatie/organisatie.tex
+++ b/Hoofdstukken/evaluatie/organisatie.tex
@@ -6,11 +6,10 @@ De samenwerking is goed verlopen. Daarbij was de duidelijke structuur van zowel 
 Na aanvang van het project zijn er ook een aantal sprint besprekingen gehouden. Deze sprint besprekingen kwamen altijd na het gesprek met de opdrachtgever. Er bleek al snel dat onze afgesproken sprint van twee werken wel erg kort was om elke twee weken dat er samengekomen werd een nieuwe lange sprintbespreking te houden. Dus er werd uiteindelijk voor gekozen om de besprekingen met de projectgroep te beperkingen tot de dagelijkse korte besprekingen.
 
 \paragraph{Taken}
-Regelmatig werd de lijst met taken bijgewerkt. Taken bestonden uit: projecttaken, als het bijhouden van de planning; ontwikkeltaken, als het oplossen van bugs en het schrijven van nieuwe features; schrijftaken en overige taken.
-
-\paragraph{Burndownchart} Er is nu gewerkt in een projectgroep zonder direct uren budget, mocht dit het geval zijn zouden de inschattingsmethoden en burndown chart uit de scrum methode kunnen worden gebruikt.
+Regelmatig werd de lijst met taken bijgewerkt. Taken bestonden uit: projecttaken, als het bijhouden van de planning; ontwikkeltaken, als het oplossen van bugs en het schrijven van nieuwe features; schrijftaken en overige taken. 
+Er is nu gewerkt in een projectgroep zonder direct uren budget, mocht dit het geval zijn zouden de inschattingsmethoden en burndown chart uit de scrum methode kunnen worden gebruikt. 
 
 \paragraph{Pull requests}
-Bij aanvang van het project was deze werkwijze voor veel teamleden nieuw. En daarom is het in het begin niet altijd juist toegepast. Maar naarmate het project vorderde is steeds vaker met succes gebruik gemaakt van het pull request principe. Dit zorgde er voor dat teamleden elkaars code controleerde en dat er minder bugs zaten in de versies op de \inlinecode{dev} branch.
+Bij aanvang van het project werken met een branching model en pull requests voor veel teamleden nieuw. Daarom is deze aanpak in de eerste fases niet altijd juist toegepast. Naarmate het project vorderde is steeds vaker met succes gebruik gemaakt van het branchingmodel en pull requests. Dit zorgde er voor dat teamleden elkaars code controleerde en dat er minder bugs zaten in de versies op de \inlinecode{dev} branch.
 
-\paragraph{Verbeteringen} Naast het integreren van documentatie zou het buildscript ook automatisch per versie de test coverage uit kunnen rekenen. Dit zou ontwikkelaars nog meer inzicht kunnen geven in de kwaliteit van de software en hoe deze voor– of achteruit gaat per versie.
+\paragraph{Continuous Integration} Naast het compileren, testen en genereren van documentatie zou het buildscript ook automatisch per versie de test coverage uit kunnen rekenen. Dit zou ontwikkelaars nog meer inzicht kunnen geven in de kwaliteit van de software en hoe deze voor– of achteruit gaat per versie.
